--- a/main.html
+++ b/main.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	 <ol type="1" >
+    <li>mobile</li>
+    <li>notebook</li>
+    <li>shirts</li>
+
+   </ol>
+   <ul type="circle">
+    <li>
+        goa
+    </li>
+    <li>delhi</li>
+    <li>mumbai</li>
+   </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
