--- a/main.html
+++ b/main.html
@@ -7,12 +7,15 @@
 </head>
 
 <body>
-	 <ol type="1" >
+	 <ol>
+        <li>shoppingList</li>
+   <ol type="1" >
     <li>mobile</li>
     <li>notebook</li>
     <li>shirts</li>
 
    </ol>
+   <li>holidayList</li>
    <ul type="circle">
     <li>
         goa
@@ -20,7 +23,9 @@
     <li>delhi</li>
     <li>mumbai</li>
    </ul>
-    <script type="text/javascript" src="./script.js">
+    </ol> <script type="text/javascript" src="./script.js">
+
+
 </script>
 
 </body>
