--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
 
 <body>
 	 <ol>
-        <li>data-ns-test=shoppingList</li>
+        <li>data-ns-test='shoppingList'</li>
    <ol type="1" >
     <li>mobile</li>
     <li>notebook</li>
     <li>shirts</li>
 
    </ol>
-   <li>data-ns-test=holidayList</li>
+   <li>data-ns-test='holidayList'</li>
    <ul type="circle">
     <li>
         goa
