--- a/main.html
+++ b/main.html
@@ -7,21 +7,22 @@
 </head>
 
 <body>
-	 <ol>
-        <li>data-ns-test='shoppingList'</li>
-   <ol type="1" >
-    <li>mobile</li>
-    <li>notebook</li>
-    <li>shirts</li>
-
+	 <h2>
+		 shoppingList
+	 </h2>
+        
+   <ol  >
+    <li data-ns-test="shoppingList">clothes</li>
+    <li data-ns-test="shoppingList">book</li>
+ <li data-ns-test="shoppingList">speaker</li>
    </ol>
-   <li>data-ns-test='holidayList'</li>
-   <ul type="circle">
-    <li>
-        goa
-    </li>
-    <li>delhi</li>
-    <li>mumbai</li>
+   <h2>
+		holidayList
+	 </h2>
+   <ul>
+    <li data-ns-test="holidayList">goa </li>
+     <li data-ns-test="holidayList">delhi </li>
+	    <li data-ns-test="holidayList">calcutta</li>
    </ul>
     </ol> <script type="text/javascript" src="./script.js">
 
